--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,7 @@
         }
     ],
     "require": {
-        "php": ">=5.6.4",
-        "tucker-eric/eloquentfilter": "^1.3"
+        "php": ">=5.6.4"
     },
     "require-dev": {
     }
