alteração do nome do projeto

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "nyl/easy-filters-eloquent",
+    "name": "nyl/ransack-eloquent",
     "description": "Descri",
     "authors": [
         {
