--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,10 @@
         "php": ">=5.6.4"
     },
     "require-dev": {
+    },
+    "autoload": {
+        "psr-4": {
+            "RansackEloquent\\": "src/"
+        }
     }
 }
